<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"
            android:id="@+id/closeFragment"
            android:layout_gravity="center|start"
            android:src="@drawable/ic_baseline_cancel_24"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/expenses_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/light_black"
        android:text="@string/merchant"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fedEdtMerchant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:text="Laptop"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fedImage"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/curved_edges"
            android:scaleType="centerCrop" />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/light_back"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/light_black"
        android:text="@string/total"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/fedEdtTotal"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fedCurrencyType"
            android:layout_marginRight="10dp"
            android:textColor="@color/blue"
            android:text="USD"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/curved_edges_blue_border"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/light_back"/>











        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/light_black"
                    android:text="@string/date"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:id="@+id/fedEdtDate"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Laptop"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                  />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/light_back"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/light_black"
                    android:text="@string/category"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:id="@+id/fedEdtCategory"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Laptop"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/light_back"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/fed_description"
            android:textColor="@color/light_black"
            android:text="@string/test_string"
            android:padding="10dp"
            android:background="@drawable/curved_edges_grey_body"/>



</androidx.appcompat.widget.LinearLayoutCompat>